<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_messages"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/nav_messages" />
    <item
        android:id="@+id/nav_weather"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/nav_weather" />
    <item
        android:id="@+id/nav_clock"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/nav_clock" />
    <item
        android:id="@+id/nav_notes"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/nav_notes" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings" />
</menu>
